subscription set up page alignment fixes

--- a/stylesheets/pages/subscription.less
+++ b/stylesheets/pages/subscription.less
@@ -431,7 +431,7 @@
 									}
 							    	.suggetion-item{
 							    		text-align: left;
-    									padding: 15px 15px;
+    									padding: 5px 15px;
     									border-bottom: solid 0.5px #cfcfcf;
     									&:last-child{
     										border-bottom: none;	
@@ -474,7 +474,8 @@
     											width: 20%;
     											vertical-align: top;
     											img{
-    												width: 100%;
+													width: 100%;
+													height:50px;
     											}
     										}
     										.discription-text{
@@ -618,7 +619,8 @@
 								    color: #004e99;
 								    strong{
 								    	display: block;
-								    	font-size: 18px;
+										font-size: 18px;
+										line-height:0.6;
 								    }
     							}
     						}
@@ -666,7 +668,8 @@
     						display: inline-block;
     						margin-left: 2.5%;
     						height: 735px;
-					        overflow-x: auto;
+							overflow-x: auto;
+							border-top:solid 1px #d2e7ff;
 					        &::-webkit-scrollbar {
 							  width: 4px;
 							}
@@ -688,7 +691,7 @@
 							  background: transparent; 
 							}
     						.product-head{
-    							padding: 22px 15px;
+    							padding: 15px;
 							    text-align: left;
 							    .head-li{
 								    font-size: 12px;
@@ -746,7 +749,6 @@
 							    }	
     						}
     						.product-item-list{
-    							background-color: #fff;
     							max-height: 700px;
     							overflow-x: auto;
     							&::-webkit-scrollbar {
@@ -771,7 +773,9 @@
 								}
     							.product-item{
     								text-align: left;
-									padding: 15px 15px;
+									padding: 5px 15px;
+									margin-bottom:5px;
+									background-color: #fff;
 									.item-li{
 										position: relative;
 										display: inline-block;
@@ -811,6 +815,7 @@
 											vertical-align: top;
 											img{
 												width: 100%;
+												height: 50px;
 											}
 										}
 										.discription-text{
@@ -1038,7 +1043,8 @@
 							}
 							.item-list-data{
 								.list-item{
-								    margin: 15px 0;
+									padding: 10px 0;
+									border-bottom: solid 0.5px #cfcfcf;
 									.item-li{
 										position: relative;
 										display: inline-block;
@@ -1554,7 +1560,10 @@
 											    &.description-image{
 											    	width: 90%;
 											    	.image-cointainer{
-											    		width: 14%;
+														width: 14%;
+														img{
+															height: 100px;
+														}
 											    	}
 											    }
 											    &.sku-input{
@@ -1598,7 +1607,8 @@
 													    font-weight: 500;
 													    color: rgba(0, 0, 0, 0.85);
 													    padding: 2px 10px;
-													    text-transform: uppercase;
+														text-transform: uppercase;
+														margin-right: 4%;
     												}
 											    }
 											    &.skuCode{
@@ -1632,7 +1642,7 @@
 											    }
 											    &.quantity{
 										    	    width: 15.4%;
-    												margin-left: 17%;
+    												float: right;
 										    	    .quantity-sub{
 									    	    	    padding: 8.5px 25px;
 										    	    }
@@ -1643,7 +1653,7 @@
 														    height: 36px;
 										    	    	}
 										    	    	&.decrement{
-									    	    		    right: 0;
+									    	    		    right: 26%;
 														    border: 0px;
 														    height: 36px;
 														    top: 1px;
@@ -1675,7 +1685,7 @@
 								    font-weight: 500;
 								    color: #000000;
 								    position: relative;
-							        margin: 5px 0px;
+							        margin: 10px 0px;
 								    .accordian-icon{
 			                            &.plues{
 			                            	background-image: url(../../resources/images/plues-icon.svg);
@@ -1716,7 +1726,10 @@
 									    	&.description-image{
 										    	width: 90%; 
 										    	.image-cointainer{
-										    		width: 14%;
+													width: 14%;
+													img{
+														height: 100px;
+													}
 										    	}
 										    }
 										    &.sku-input{
@@ -1760,7 +1773,8 @@
 												    font-weight: 500;
 												    color: rgba(0, 0, 0, 0.85);
 												    padding: 2px 10px;
-												    text-transform: uppercase;
+													text-transform: uppercase;
+													margin-right: 4%;
 												} 
 										    }
 										    &.skuCode{
@@ -1794,7 +1808,7 @@
 										    }
 										    &.quantity{
 								    	        width: 14.2%;
-												margin-left: 17%;
+												float: right;
 									    	    .quantity-sub{
 							    	    	         padding: 8.5px 22px;
 									    	    }
@@ -1805,7 +1819,7 @@
 													    height: 36px;
 									    	    	}
 									    	    	&.decrement{
-								    	    		    right: 0;
+								    	    		    right: 28%;
 													    border: 0px;
 													    height: 36px;
 													    top: 1px;
@@ -2041,7 +2055,7 @@
 											    &.description-image{
 										    	    width: 93%;
 											    	.image-cointainer{
-											    		width: 30%;
+											    		width: 10%;
     													vertical-align: top;
     													display: inline-block;
 											    	}
@@ -2053,7 +2067,8 @@
 											    }
 											    &.removeItem{
 										    	    width: 16px;
-    												height: 16px;
+													height: 16px;
+													float:right;
     												.mz-calendar-icon{
     													width: 100%;
     												}
@@ -2138,7 +2153,7 @@
 		                                            margin: 0 auto;
 		                                            display: inline-block;
 		                                            vertical-align: top;
-		                                            margin-left: 15%;
+		                                            float:right;
 		                                            .quantity-sub{
 	                                                    border: solid 1px #cfcfcf;
 													    width: 100%;
@@ -2850,7 +2865,7 @@
 								    font-weight: 500;
 								    color: #000000;
 								    position: relative;
-							        margin: 5px 0px;
+							        margin: 10px 0px;
 								    .accordian-icon{
 			                            &.plues{
 			                            	background-image: url(../../resources/images/plues-icon.svg);
@@ -2878,11 +2893,11 @@
 								    }
 								}
 								.product-item-list{
-									margin: 12px 15px;
-									margin-bottom: 8px;
+									margin: 0px 6px;
+									margin-bottom: 2px;
 									border-radius: 4px;
 									.product-item{
-										margin: 10px 5px;
+										margin: 6px 0px;
 									    border-radius: 4px;
 									    background-color: #ffffff;
 									    padding: 8px;
@@ -2918,7 +2933,7 @@
 										    &.heat-sensitive{
 										    	width: 100%;
 											    display: block;
-											    border-bottom: 1px solid #efeded;
+											    border-bottom: solid 0.5px #efeded;
 											    margin-bottom: 10px;
 											    text-align: right;
 												height: 22px;
